# youtube_summarizer

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: gui_summary.py
src/common/: cc_parser.py  constants.py  dtypes.py  util.py  youtube_info.py
src/generative_ai/: __init__.py  gemini.py
src/manager/: prompt_manager.py  settings_manager.py
